# tinyb

api/: tinyb.hpp
api/tinyb/: BluetoothAgent.hpp  BluetoothEvent.hpp  BluetoothManager.hpp  BluetoothObject.hpp
api_c/: tiny_bt_c.h
api_c/impl/: tiny_bt_c_impl.c
examples/: CMakeLists.txt  helloedr.cpp  tb_cli.cpp
include/: generated-code.h  tinyb_utils.hpp
src/: BluetoothAgent.cpp  BluetoothEvent.cpp  BluetoothManager.cpp  CMakeLists.txt  generated-code.c  org.bluez.xml
